--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "dependencies": {},
   "devDependencies": {
     "chalk": "1.1.3",
-    "mime-db": "^1.22.0",
+    "mime-db": "1.28.0",
     "mime-types": "2.1.15",
     "runmd": "0.1.8"
   },
   "scripts": {
-    "prepublish": "node src/build.js",
+    "prepare": "node src/build.js && runmd --output README.md src/README_js.md",
     "md": "runmd --watch --output README.md src/README_js.md",
     "test": "mocha src/test.js"
   },
